--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "2.0.1",
     "body-parser": "1.18.3",
     "express": "4.16.3",
     "express-query-int": "3.0.0",
+    "jsonwebtoken": "8.3.0",
     "lodash": "4.17.10",
     "mongoose": "5.1.6",
     "mongoose-paginate": "5.0.3",
